--- a/Kanban/Shared/MainLayout.razor
+++ b/Kanban/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 
 <div class="main">
     <div class="top-row px-4 auth">
-        <span class="pr-2">Site Language</span><ChooseLanguage/>
+        <span class="pr-2">Language</span><ChooseLanguage/>
         <LoginDisplay />
     </div>
 
